module 2 assignment commit to fix scrollbar issue on mobile

--- a/module2_solution/css/stylesheet.css
+++ b/module2_solution/css/stylesheet.css
@@ -71,7 +71,7 @@ p {
 }
 
 .row .section:hover {
-	overflow: auto;
+	overflow-y: scroll;
 }
 
 /* desktop */
